# tempo

./: .dockerignore  .drone.yml  .env  .errcheck-exclude.txt  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .tempo.yaml  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSING.md  MAINTAINERS.md  Makefile  PLAN.md  QUERIER-Rust.md  README.md  RELEASES.MD  VERSION  WIRESMITH_MIGRATION.md  WORKFLOW.md  after.txt  after1000.txt  before.txt  benchstat-before-after-block.txt  buf.gen.yaml  buf.work.yaml  buf.yaml  go.mod  go.sum  memcached.md  metrics-generator-optimization-summary.md  proto_patch.sed  (+3 more)
.agents/: README.md
.cargo/: config.toml
.chloggen/: 7106-drop-32bit-arm.yaml  7143_blocklist_poller_prefix_precompute.yaml  7271_backend_double_prefix.yaml  7345_traceql_nil_fixes.yaml  7375-mcp-server-docs.yaml  7375-update-traceql-doc-mcp.yaml  7384_buffered_produce_bytes_rename.yaml  7404-reenable-darwin-builds.yaml  7505_querier_worker_deadlock_fix.yaml  7524_traceql_cidr.yaml  7613_metrics_generator_consumer_group.yaml  7638-user-configurable-overrides-alert-for.yaml  README.md  TEMPLATE.yaml  _migrated_00_7207.yaml  _migrated_00_7298.yaml  _migrated_00_7338.yaml  _migrated_01_7202.yaml  _migrated_01_7322.yaml  _migrated_01_7323.yaml  _migrated_02_6866.yaml  _migrated_02_7338.yaml  _migrated_03_7140.yaml  _migrated_04_7142.yaml  _migrated_05_7311.yaml  _migrated_06_7184.yaml  _migrated_07_7240.yaml  _migrated_08_7141.yaml  _migrated_09_7152.yaml  _migrated_10_7148.yaml  _migrated_11_7105.yaml  _migrated_12_7099.yaml  _migrated_13_7162.yaml  _migrated_14_7204.yaml  _migrated_15_7204.yaml  _migrated_16_7179.yaml  _migrated_17_7244.yaml  _migrated_18_6992.yaml  _migrated_19_6992.yaml  _migrated_20_6992.yaml  (+112 more)
.drone/: .drone.yml  docker-manifest.tmpl  drone.jsonnet  drone.yml  readme.md
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml  pull_request_template.md  renovate.json5
.specstory/: .gitignore  .project.json
bots/: execute-phase1-results.md  known-issues-pre-existing.md  test-results-after-fixes-summary.md  test-results-after-fixes-v2.txt
buf/: buf.gen-config.yaml  buf.gen.backend.yaml  buf.gen.frontend.yaml  buf.gen.tempopb.yaml  buf.yaml
crates/bench/: Cargo.toml  README.md
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/provider/: BENCHMARKS.md  Cargo.toml
crates/provider/benches/: traceql_queries.rs  udf_bench.rs
crates/provider/src/: display.rs  filter.rs  lib.rs  local_table_provider.rs  spanset_converter.rs  table_provider.rs  udf.rs  views.rs  vparquet4_exec.rs
crates/provider/src/sql/: spans_view.sql
crates/querier/: Cargo.toml  Dockerfile  PLAN.md  build.rs
crates/querier/proto/: tempo.proto
crates/querier/src/: config.rs  error.rs  http.rs  lib.rs  main.rs
crates/querier/src/worker/: frontend_processor.rs  mod.rs  processor_manager.rs  query_executor.rs  worker.rs
crates/storage/: Cargo.toml
crates/storage/src/: block_info.rs  lib.rs  object_store.rs  tempo_storage.rs  vparquet4.rs
crates/tests/: Cargo.toml
crates/tests/benches/: BASELINE-Go.md  sql_queries.rs  traceql_queries.rs
crates/tests/benches/queries/: complex.sql  count.sql  mixed.sql  mixedValMixedMatchAnd.sql  mixedValMixedMatchOr.sql  mixedValNoMatch.sql  pipeOr.sql  rate.sql  resourceAttIntrinsicMatch.sql  resourceAttIntrinsicNoMatch.sql  resourceAttValMatch.sql  resourceAttValNoMatch.sql  select.sql  spanAttIntrinsicMatch.sql  spanAttIntrinsicMatchFew.sql  spanAttIntrinsicNoMatch.sql  spanAttValMatch.sql  spanAttValMatchFew.sql  spanAttValNoMatch.sql  struct.sql  traceOrMatch.sql  traceOrMatchFew.sql  traceOrNoMatch.sql
crates/tests/src/: lib.rs
crates/tests/tests/: integration_tests.rs
crates/vparquet4/: Cargo.toml  build.rs
crates/vparquet4/benches/: async_reader.rs  block_traceql_manual.rs  parquetOperations.rs  parquet_operations.rs  read_benchmark.rs  spanAttIntrinsicMatch.rs  tempo_compare.rs  traceql_benchmark.rs
crates/vparquet4/examples/: inspect_schema.rs
crates/vparquet4/src/: error.rs  filter.rs  lib.rs  reader.rs  schema.rs
crates/vparquet4/src/domain/: convert.rs  mod.rs
crates/vparquet4/src/filter/: mod.rs  row_group.rs  statistics.rs
crates/vparquet4/src/iter/: mod.rs  span_iter.rs  trace_iter.rs
crates/vparquet4/src/projection/: builder.rs  mod.rs
crates/vparquet4/src/reader/: async_reader.rs  mod.rs  sync_reader.rs
crates/vparquet4/src/schema/: field_paths.rs  mod.rs  validation.rs
crates/vparquet4/tests/: debug_schema.rs  reader_tests.rs  test_debug_domain.rs  test_domain.rs  test_filtering.rs  test_iterators.rs  test_projection.rs  test_reader.rs
dev/: null
docs/: Makefile  README.md  docs.mk  embed.go  make-docs  project-context.md  tempo-architecture-complete.dot  tempo-architecture-graphviz.md  tempo-architecture-paths.dot  tempo-architecture.md  tempo-complete-architecture.md  tempo-rhythm-architecture.md  variables.mk
example/: docker-compose.yaml  frigg-query.yaml  frigg.yaml  load-generator.json  local-config.yaml  notebook.ipynb  readme.md
friggdb/: block_meta.go  block_meta_test.go  compaction_block_selector.go  compactor.go  compactor_block.go  compactor_block_test.go  compactor_bookmark.go  compactor_bookmark_test.go  compactor_test.go  complete_block.go  config.go  friggdb.go  friggdb_test.go  head_block.go  object.go  object_test.go  record.go  record_test.go  wal.go  wal_complete_block.go  wal_head_block.go  wal_test.go
integration/: util.go
notebooks/: test.ipynb
operations/: tempo-3.0-legacy-panel-titles.txt
pkg/: .gitignore  buf.yaml
scripts/: README.md  docs-pr-classify.jq  docs-pr-triage-local.sh  docs-upstream-pr-candidates.sh
std/: null
tempodb/: compaction_block_selector.go  compaction_block_selector_test.go  compactor.go  compactor_bookmark.go  compactor_bookmark_test.go  compactor_distributed_lsm.go  compactor_integration_test.go  compactor_test.go  config.go  friggdb.go  (+11 more)
(+3763 files in other folders)
