[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tempo-datafusion"
path = "src/main.rs"

[dependencies]
context = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
dirs = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
