[package]
name = "context"
version= { workspace = true }
edition= { workspace = true }

[dependencies]
config = { workspace = true }
provider = { workspace = true }
storage = { workspace = true }
traceql = { workspace = true }

async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-datasource = { workspace = true }
datafusion-physical-plan = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
