[package]
name = "tempo-querier"
version= { workspace = true }
edition= { workspace = true }
license= { workspace = true }

[dependencies]
tonic= { workspace = true }
prost= { workspace = true }
prost-types= { workspace = true }
tokio= { workspace = true }
tracing= { workspace = true }
tracing-subscriber= { workspace = true }

# HTTP server dependencies
axum= { workspace = true }
hyper= { workspace = true }
tower= { workspace = true }
tower-http= { workspace = true }

# Serialization
serde= { workspace = true }
serde_json= { workspace = true }

# Error handling
thiserror= { workspace = true }

# Async/Futures
futures= { workspace = true }
tokio-stream= { workspace = true }

# Backoff for retries
backoff= { workspace = true }

# HTTP types for conversion
http= { workspace = true }
http-body-util= { workspace = true }
bytes= { workspace = true }

# Hostname for worker ID
hostname= { workspace = true }

# Metrics
prometheus= { workspace = true }

# Query execution
vparquet4 = { path = "../vparquet4" }
provider = { path = "../provider" }
datafusion = { workspace = true }
url = "2"

[build-dependencies]
tonic-build= { workspace = true }
