[package]
name = "tests"
version.workspace = true
edition.workspace = true

[dependencies]
context = { workspace = true }
provider = { workspace = true }
storage = { workspace = true }
traceql = { workspace = true }

anyhow = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
futures.workspace = true

[dev-dependencies]
criterion = { workspace = true }
test_each_file.workspace = true

[[bench]]
name = "traceql_queries"
harness = false

[[bench]]
name = "sql_queries"
harness = false
