[package]
name = "vparquet4"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Parquet and Arrow for reading vParquet4 files
parquet = { workspace = true, features = ["object_store"] }
arrow.workspace = true

# Async I/O support
object_store = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

# Error handling and utilities
anyhow = { workspace = true }
thiserror.workspace = true
bytes.workspace = true
tracing = { workspace = true }
hex.workspace = true

# Protocol buffers for OTLP types
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
criterion = { workspace = true }
tokio-test.workspace = true

[features]
default = ["async"]
async = []

[[bench]]
name = "read_benchmark"
harness = false
