[package]
name = "vparquet4"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "block_traceql_manual"
harness = false

[[bench]]
name = "parquet_operations"
harness = false
