[package]
name = "vparquet4"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet = { workspace = true }
arrow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
ustr = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "tempo_compare"
harness = false

[[bench]]
name = "parquet_operations"
harness = false

[[bench]]
name = "async_reader"
harness = false
